--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 199,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 200,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 201,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 202,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -451,6 +451,7 @@
         "        self.monitor_queue = monitor_queue\n",
         "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
         "        self._own_queue = Queue()\n",
+        "        self.duration = 5\n",
         "\n",
         "    # выдаёт собственную очередь для взаимодействия\n",
         "    def entity_queue(self):\n",
@@ -461,22 +462,22 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        # mode = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
+        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
         "\n",
-        "        # # запрос для сущности WorkerB - \"скажи hello\"\n",
-        "        # event = Event(source=self.__class__.__name__,\n",
-        "        #               destination='LightsGPIO',\n",
-        "        #               operation='set_mode',\n",
-        "        #               parameters=json.dumps(mode)\n",
-        "        #               )\n",
+        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
+        "        event = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='set_mode',\n",
+        "                      parameters=json.dumps(mode)\n",
+        "                      )\n",
         "\n",
-        "        # mode_2 = {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"}\n",
+        "        mode_2 = {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
-        "        # event_2 = Event(source=self.__class__.__name__,\n",
-        "        #               destination='LightsGPIO',\n",
-        "        #               operation='set_mode',\n",
-        "        #               parameters=json.dumps(mode_2)\n",
-        "        #               )\n",
+        "        event_2 = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='set_mode',\n",
+        "                      parameters=json.dumps(mode_2)\n",
+        "                      )\n",
         "        mode_3 = {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
         "        event_3 = Event(source=self.__class__.__name__,\n",
@@ -486,8 +487,10 @@
         "                      )\n",
         "\n",
         "\n",
-        "        # self.monitor_queue.put(event)\n",
-        "        # self.monitor_queue.put(event_2)\n",
+        "        self.monitor_queue.put(event)\n",
+        "        sleep(self.duration)\n",
+        "        self.monitor_queue.put(event_2)\n",
+        "        sleep(self.duration)\n",
         "        self.monitor_queue.put(event_3)\n",
         "\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
@@ -515,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 203,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -553,7 +556,7 @@
         "    # основной код сущности\n",
         "    def run(self):\n",
         "        print(f'[{self.__class__.__name__}] старт')\n",
-        "        attempts = 10\n",
+        "        attempts = 100\n",
         "        while attempts > 0:\n",
         "            try:\n",
         "                event: Event = self._own_queue.get_nowait()\n",
@@ -571,13 +574,13 @@
         "            except Empty:\n",
         "                sleep(0.2)\n",
         "                attempts -= 1\n",
-        "        print(f'[{self.__class__.__name__}] завершение работы')"
+        "        print(f'[{self.__class__.__name__}] завершение работы\\n')"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Сучность SelfDiagnostics\n",
+        "###Сущность SelfDiagnostics\n",
         "сущность само-диагностики"
       ],
       "metadata": {
@@ -601,29 +604,59 @@
         "        self.monitor_queue = monitor_queue\n",
         "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
         "        self._own_queue = Queue()\n",
+        "        self.duration = 8\n",
         "\n",
         "    def entity_queue(self):\n",
         "        return self._own_queue\n",
         "\n",
         "    # основной код сущности\n",
         "    def run(self):\n",
-        "        print(f'[{self.__class__.__name__}] старт')\n",
-        "        mode_4 = {}\n",
-        "        event_4 = Event(source=self.__class__.__name__,\n",
-        "              destination='LightsGPIO',\n",
-        "              operation='send_conditions',\n",
-        "              parameters=json.dumps(mode_4)\n",
-        "              )\n",
+        "      print(f'[{self.__class__.__name__}] старт')\n",
+        "      attempts = 100\n",
+        "      while attempts > 0:\n",
+        "          try:\n",
+        "              event: Event = self._own_queue.get_nowait()\n",
         "\n",
-        "        # self.monitor_queue.put(event)\n",
-        "        # self.monitor_queue.put(event_2)\n",
-        "        self.monitor_queue.put(event_4)\n",
-        "        print(f'[{self.__class__.__name__}] завершение работы')\n"
+        "              mode_4 = {}\n",
+        "              event_4 = Event(source=self.__class__.__name__,\n",
+        "                    destination='LightsGPIO',\n",
+        "                    operation='send_conditions',\n",
+        "                    parameters=json.dumps(mode_4)\n",
+        "                    )\n",
+        "\n",
+        "              sleep(self.duration)\n",
+        "              self.monitor_queue.put(event_4)\n",
+        "              sleep(0.2)\n",
+        "              attempts -= 1\n",
+        "\n",
+        "          except Empty:\n",
+        "              sleep(0.2)\n",
+        "              attempts -= 1\n",
+        "      print(f'[{self.__class__.__name__}] завершение работы')"
       ],
       "metadata": {
         "id": "OU4QLeivROiP"
       },
-      "execution_count": 66,
+      "execution_count": 204,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Сущность CitySystemConnector\n",
+        "сущность CitySystemConnector"
+      ],
+      "metadata": {
+        "id": "4aSywY-sZofS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iAchz0V_ZoOf"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -646,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 205,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -687,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 206,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -699,7 +732,7 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "6def7496-cd1f-4a44-f904-42c8be66929f",
+        "outputId": "1e1fe3a9-678e-44ee-aba7-714d327082fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -766,16 +799,16 @@
         "control_system.start()\n",
         "lights_gpio.start()\n",
         "self_diagnostics.start()\n",
-        "sleep(2)"
+        "sleep(20)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0s2HyD-Dv3Gy",
-        "outputId": "341b1ce0-10bb-4cbf-b9ce-79d04d6bd62e"
+        "outputId": "c5049644-adcf-4274-a5ec-f7a76975a95b"
       },
-      "execution_count": 69,
+      "execution_count": 207,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,21 +816,30 @@
           "text": [
             "[монитор] старт\n",
             "[ControlSystem] старт\n",
-            "[ControlSystem] отправляем тестовый запрос[LightsGPIO] старт\n",
-            "\n",
-            "[SelfDiagnostics] старт[ControlSystem] завершение работы\n",
-            "\n",
-            "[SelfDiagnostics] завершение работы\n",
+            "[LightsGPIO] старт\n",
+            "[ControlSystem] отправляем тестовый запрос\n",
+            "[SelfDiagnostics] старт\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'yellow', 'direction_2': 'yellow', 'direction_1_arrow': 'on', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}')\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}!\n",
+            "[ControlSystem] завершение работы\n",
             "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'yellow', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
             "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
-            "[монитор] обрабатываем событие Event(source='SelfDiagnostics', destination='LightsGPIO', operation='send_conditions', parameters='{}')\n",
-            "[монитор] отправляем запрос Event(source='SelfDiagnostics', destination='LightsGPIO', operation='send_conditions', parameters='{}')\n",
             "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
             "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
-            "[LightsGPIO] SelfDiagnostics запрашивает состояние режима {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
-            "[LightsGPIO] отправленные сведения: {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
-            "[LightsGPIO] завершение работы\n"
+            "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
+            "[монитор] завершение работы\n",
+            "[SelfDiagnostics] завершение работы\n",
+            "[LightsGPIO] завершение работы\n",
+            "\n"
           ]
         }
       ]
@@ -822,7 +864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 208,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
