--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 70,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 71,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": 72,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": 73,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -452,6 +452,13 @@
         "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
         "        self._own_queue = Queue()\n",
         "        self.duration = 5\n",
+        "        self.number_of_works = 5\n",
+        "\n",
+        "        self.traffic_lights_queue = [\n",
+        "            {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"},\n",
+        "            {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"},\n",
+        "        ]\n",
+        "\n",
         "\n",
         "    # выдаёт собственную очередь для взаимодействия\n",
         "    def entity_queue(self):\n",
@@ -460,38 +467,31 @@
         "    # основной код сущности\n",
         "    def run(self):\n",
         "        print(f'[{self.__class__.__name__}] старт')\n",
-        "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
-        "\n",
-        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
-        "\n",
-        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
-        "        event = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode)\n",
-        "                      )\n",
-        "\n",
-        "        mode_2 = {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"}\n",
-        "\n",
-        "        event_2 = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode_2)\n",
-        "                      )\n",
-        "        mode_3 = {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
-        "\n",
-        "        event_3 = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode_3)\n",
-        "                      )\n",
         "\n",
         "\n",
-        "        self.monitor_queue.put(event)\n",
-        "        sleep(self.duration)\n",
-        "        self.monitor_queue.put(event_2)\n",
-        "        sleep(self.duration)\n",
-        "        self.monitor_queue.put(event_3)\n",
+        "        condition = 0\n",
+        "        iterations = 0\n",
+        "        flag = True\n",
+        "        while flag:\n",
+        "          if condition < 2:\n",
+        "            if self.number_of_works != iterations:\n",
+        "              mode = self.traffic_lights_queue[condition]\n",
+        "\n",
+        "              event = Event(source=self.__class__.__name__,\n",
+        "                        destination='LightsGPIO',\n",
+        "                        operation='set_mode',\n",
+        "                        parameters=json.dumps(mode)\n",
+        "                        )\n",
+        "              self.monitor_queue.put(event)\n",
+        "              sleep(self.duration)\n",
+        "\n",
+        "              condition += 1\n",
+        "              iterations += 1\n",
+        "            else:\n",
+        "              flag = False\n",
+        "          else:\n",
+        "            condition = 0\n",
+        "\n",
         "\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
       ]
@@ -518,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 203,
+      "execution_count": 74,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -561,8 +561,8 @@
         "            try:\n",
         "                event: Event = self._own_queue.get_nowait()\n",
         "                if event.operation == \"set_mode\":\n",
-        "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
-        "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\")\n",
+        "                    print(f\"\\n[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
+        "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\\n\")\n",
         "                    self.conditions = event.parameters\n",
         "                    sleep(0.2)\n",
         "                    attempts -= 1\n",
@@ -637,7 +637,7 @@
       "metadata": {
         "id": "OU4QLeivROiP"
       },
-      "execution_count": 204,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -656,7 +656,7 @@
       "metadata": {
         "id": "iAchz0V_ZoOf"
       },
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -679,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 76,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -720,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 77,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -732,7 +732,7 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "1e1fe3a9-678e-44ee-aba7-714d327082fe",
+        "outputId": "b0767b0f-5420-4bce-a7f0-445361f8ec0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -799,16 +799,16 @@
         "control_system.start()\n",
         "lights_gpio.start()\n",
         "self_diagnostics.start()\n",
-        "sleep(20)"
+        "sleep(60)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0s2HyD-Dv3Gy",
-        "outputId": "c5049644-adcf-4274-a5ec-f7a76975a95b"
+        "outputId": "e339871c-bdfd-4c9b-8d77-0853c61cc3d7"
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,29 +817,42 @@
             "[монитор] старт\n",
             "[ControlSystem] старт\n",
             "[LightsGPIO] старт\n",
-            "[ControlSystem] отправляем тестовый запрос\n",
             "[SelfDiagnostics] старт\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "\n",
             "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
             "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}\n",
             "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "\n",
             "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
             "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'yellow', 'direction_2': 'yellow', 'direction_1_arrow': 'on', 'direction_2_arrow': 'on'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"on\"}!\n",
-            "[ControlSystem] завершение работы\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'yellow', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
-            "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
-            "[монитор] завершение работы\n",
+            "\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
+            "\n",
             "[SelfDiagnostics] завершение работы\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[LightsGPIO] завершение работы\n",
-            "\n"
+            "\n",
+            "[ControlSystem] завершение работы\n"
           ]
         }
       ]
@@ -864,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
